# HTXY

./: CMakeLists.txt  UsbChange.rc  data_calc_util.h  gtk_win.h  resource.h  win_show_info.h  windows_sys.cpp
data/: config.json  const_string.xml  setting.json
gtkrc/: gtkrc
install/: HTXY.xml
libsoup/lib/: libsoup-2.4.lib
src/: CMakeLists.txt  CsystemTray.cpp  CsystemTray.h  UsbChange.aps  data_calc_util.c  data_calc_util.h  gtk_win.h  list_font.c  main.c  win_login.c  win_login.h  win_main_frame.c  win_main_frame.h  win_show_info.c  win_show_list.c  win_show_list_treeView.c  win_show_list_treeView.h  win_show_set.c  win_show_set.h  win_show_shishi.c  win_show_shishi.h  windows_sys.cpp  windows_sys.h
